--- a/gb/23/4/13/n13971854.md
+++ b/gb/23/4/13/n13971854.md
@@ -1,25 +1,25 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>专家：政治审查下中国聊天机器人发展不乐观</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>专家：政审制度下 中国聊天机器人难发展</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/03/id13956026-GettyImages-1248368293-600x400.jpg" />
-<h6>中共官方拟审查聊天机器人内容“不得颠覆国家政权”等。图为2023年3月16日，百度首席技术官王海峰出席“文心一言”新闻发布会。(MICHAEL ZHANG/AFP via Getty Images)
+<h6>中共官方拟审查聊天机器人内容“不得颠覆国家政权”等。图为2023年3月16日，百度首席技术官王海峰出席“文心一言”新闻发布会。(Michael Zhang/AFP via Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2023年04月13日讯】（大纪元记者宁海钟、易如报导）自美国公司OpenAI开发的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%81%8A%E5%A4%A9%E6%9C%BA%E5%99%A8%E4%BA%BA.md#1">聊天机器人</a>ChatGPT于去年底亮相以来，全球AI技术热度飙升。中国科技公司也成批跟进，但已推出的聊天机器人，因实测使用时的政治审查受到用户讥讽。日前，官方更拟审查内容，要求“不得<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%A2%A0%E8%A6%86%E5%9B%BD%E5%AE%B6%E6%94%BF%E6%9D%83.md#1">颠覆国家政权</a>”等。</p>
-<p>专家表示，因应中共审查，未来中国的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%81%8A%E5%A4%A9%E6%9C%BA%E5%99%A8%E4%BA%BA.md#1">聊天机器人</a>可能会分国内版和国际版。而至关重要的是，在美中科技战的背景下，中国AI技术落后几年，“一个地球、两套系统或标准”或将形成，最后中共会被欧美标准淘汰。</p>
+	<p>【大纪元2023年04月13日讯】（大纪元记者宁海钟、易如报导）自美国公司OpenAI开发的聊天机器人ChatGPT于去年底亮相以来，全球AI技术热度飙升。中国科技公司也成批跟进，但已推出的聊天机器人，因实测使用时的政治审查受到用户讥讽。日前，官方更拟审查内容，要求“不得颠覆国家政权”等。</p>
+<p>专家表示，因应中共审查，未来中国的聊天机器人可能会分国内版和国际版。而至关重要的是，在美中科技战的背景下，中国AI技术落后几年，“一个地球、两套系统或标准”或将形成，最后中共会被欧美标准淘汰。</p>
 <h2>超级政治审查下的中国聊天机器人产业</h2>
-<p>中共国家互联网信息办公室（简称网信办）4月11日发布《生成式人工智能服务管理办法（征求意见稿）》，就研发、利用生成式人工智能产品的限定，强调利用人工智能生成的内容，“应当体现社会主义核心价值观”，不得含有“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%A2%A0%E8%A6%86%E5%9B%BD%E5%AE%B6%E6%94%BF%E6%9D%83.md#1">颠覆国家政权</a>、推翻社会主义制度”等等。违反规定的人可能面临罚款或刑事调查。</p>
+<p>中共国家互联网信息办公室（简称网信办）4月11日发布《生成式人工智能服务管理办法（征求意见稿）》，就研发、利用生成式人工智能产品的限定，强调利用人工智能生成的内容，“应当体现社会主义核心价值观”，不得含有“颠覆国家政权、推翻社会主义制度”等等。违反规定的人可能面临罚款或刑事调查。</p>
 <p>去年11月正式推出的ChatGPT打响了全球聊天机器人竞赛的第一炮，隔着网络防火墙的中国大陆也被这股聊天机器人热潮席卷。从去年底开始，腾讯、华为、字节跳动、京东、360、快手、网易等十几家中国科技企业都相继宣布正在研发类似ChatGPT的产品。百度、阿里巴巴和商汤科技则已推出自己的产品。</p>
 <p>4月11日，阿里巴巴推出“通义千问”AI聊天机器人。阿里巴巴董事会主席兼CEO张勇表示，阿里巴巴所有产品未来将接入“通义千问”大模型，进行全面改造。前一天，商汤科技也推出了一系列新的人工智能产品，包括聊天机器人和图像生成器。商汤科技因开发人脸识别程序协助中共监视新疆维吾尔人，2019年被美国列入贸易黑名单。</p>
 <p>与AI相关的伦理问题、泄密和假讯息，就业和教育等问题也倍受关注。不少科技专家呼吁监管机构管制AI，一些政府正在研究监管人工智能技术。3月底，意大利政府因ChatGPT泄密和年龄管制问题，暂时禁止该AI。</p>
 <p>台湾国防安全研究院中共政军与作战概念研究所助理研究员王绣雯，4月13日对大纪元表示，审查和限制是各国政府对AI必然发展出来的制度设计，但是西方国家主要在防止AI对国家社会安定和人民生命等基本权利的伤害，而极权政府则是以防止政权被颠覆为最高目的。</p>
 <p>王绣雯表示，中共特别担心AI聊天机器人会给出他们不想让人民知道的回答，所以用“假讯息”名义来总括一切不合其价值，例如所谓社会主义规范的讯息，这样才有监管和取缔的正当性。</p>
 <p>“中共未来会在符合其价值观的名义下，对讯息进行最大幅度的监管和过滤。这本来就是共产主义愚民政策和用民族主义洗脑的看家本领，只不过现在是用AI监管和过滤，所以速度会变得很快。”</p>
-<p>加拿大约克大学教授沈荣钦4月13日也对大纪元表示，中共从发展网际网络开始，就一直搞内容审查。因为它必须要控制所有国民的意识形态。而监控资讯本来就是中共利用数位极权来巩固政权的方式的一种。在AI领域上，中共也会沿袭这个方法。而中共定义的虚假信息，通常指的是不符合中共意识形态的消息。</p>
+<p>加拿大约克大学教授沈荣钦（Jung-Chin Shen）4月13日也对大纪元表示，中共从发展网际网络开始，就一直搞内容审查。因为它必须要控制所有国民的意识形态。而监控资讯本来就是中共利用数位极权来巩固政权的方式的一种。在AI领域上，中共也会沿袭这个方法。而中共定义的虚假信息，通常指的是不符合中共意识形态的消息。</p>
 <p>多年来，中共一直严格审查其互联网，中国科技巨头也谨慎行事，尤其是在中共国家主席习近平和1989年镇压天安门广场民主示威等敏感话题上。</p>
-<p>3月16日，百度首席执行官李彦宏率先发布了聊天机器人“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%87%E5%BF%83%E4%B8%80%E8%A8%80.md#1">文心一言</a>”（Ernie Bot），并从当天开始允许用户申请使用和测试。</p>
-<p>路透社、《华尔街日报》等外媒，包括阿里巴巴创始人马云控制的《南华早报》，都有报导中国聊天机器人遇上的政治审查难题。比如，百度的“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%87%E5%BF%83%E4%B8%80%E8%A8%80.md#1">文心一言</a>”（Ernie Bot）聊天机器人，在遇到政治类问题，诸如中共高层领导人、新疆、白纸运动，特别是涉及习近平时，均会拒答或要求改变话题，由此引发人们讥笑。</p>
+<p>3月16日，百度首席执行官李彦宏率先发布了聊天机器人“文心一言”（Ernie Bot），并从当天开始允许用户申请使用和测试。</p>
+<p>路透社、《华尔街日报》等外媒，包括阿里巴巴创始人马云控制的《南华早报》，都有报导中国聊天机器人遇上的政治审查难题。比如，百度的“文心一言”（Ernie Bot）聊天机器人，在遇到政治类问题，诸如中共高层领导人、新疆、白纸运动，特别是涉及习近平时，均会拒答或要求改变话题，由此引发人们讥笑。</p>
 <p>《华尔街日报》测试了四款中文聊天机器人产品，对话表现最好的聊天机器人是“吉皮Talk”（Gipi Talk）。当有人问习近平是否是一位好领导人时，得到的回应是输入“无法通过安全审查”，然后是“我们换个话题，说点别的吧。”</p>
 <p>在此次网信办管理办法发布后，不少网友戏称，未来中国的生成式AI机器人应该被称为“ChatXJP”。XJP是习近平姓名的首个拼音字母组合。</p>
 <h2>专家：中国聊天机器人或将分国内和国际版</h2>
@@ -37,7 +37,7 @@
 <p>目前已有观点认为，因为审查的原因，中国可能发展出有别于ChatGPT的“中国特色聊天机器人”。</p>
 <p>沈荣钦表示，最后中国的聊天机器人可能也会像抖音，在国外有TikTok。在国内有个国内版，在国际上会有个国际版。</p>
 <p>王绣雯则表示，中国产聊天机器人出问题和市场有限是一定的。就像华为手机没有世界通用的APP或软件系统支援，最后就只能在中国或其盟友国家内使用。“我觉得西方国家人民倒不是因为不自由或不开放而排斥中国聊天机器人，而是在回复内容和使用功能的比较（货比货）之下，中国聊天机器人会被国际市场自然淘汰，未来大概只能用廉价等优点来吸引低度发展国家。”</p>
-<figure id="attachment_13930166" aria-describedby="caption-attachment-13930166" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13930166-551cfc9025935bd894105f403be1ec5c.jpeg"><img class="size-large wp-image-13930166" src="https://i.epochtimes.com/assets/uploads/2023/02/id13930166-551cfc9025935bd894105f403be1ec5c-600x400.jpeg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13930166" class="wp-caption-text">近期人工智能ChatGPT，引起广泛注意。（Shutterstock）</figcaption></figure>
+<figure id="attachment_13930166" aria-describedby="caption-attachment-13930166" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13930166-551cfc9025935bd894105f403be1ec5c.jpeg"><img decoding="async" class="size-large wp-image-13930166" src="https://i.epochtimes.com/assets/uploads/2023/02/id13930166-551cfc9025935bd894105f403be1ec5c-600x400.jpeg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13930166" class="wp-caption-text">近期人工智能ChatGPT，引起广泛注意。(Shutterstock)</figcaption></figure>
 <h2>一个地球、两套系统或标准？</h2>
 <p>中共当局在2017年印发的《新一代人工智能发展规划》提出，到2030年AI理论、技术与应用总体达到世界领先水平，成为世界主要AI创新中心。</p>
 <p>不过，中美的AI竞争，除了由于中共自己的审查机制等自我限制，可能无法进入广阔的国际市场，美国的制裁，也使中共在AI领域更处劣势。</p>
@@ -49,45 +49,36 @@
 <p>不过沈荣钦认为，如果到ChatGPT5.0的话，就会是比较通用型的人工智能系统。从技术上来看，并没有中共和美国采用不同的两套技术的说法，还是同样的技术。只是因为中共的内容审查，才被迫分成两套，这是中国科技公司采取的应对方式。</p>
 <p>责任编辑：高静#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900546.md#1">AI聊天机器人助长作弊？纽约市公校禁ChatGPT</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13924196.md#1">与ChatGPT竞争 谷歌将推出AI聊天机器人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13925769.md#1">谷歌推AI聊天机器人Bard后 Alphabet股价跌7%</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13926746.md#1">谷歌人工智能聊天机器人Bard 在首次演示中出错</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/6/n13900546.md#1">AI聊天机器人助长作弊？纽约市公校禁ChatGPT</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/6/n13924196.md#1">与ChatGPT竞争 谷歌将推出AI聊天机器人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/8/n13925769.md#1">谷歌推AI聊天机器人Bard后 Alphabet股价跌7%</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/10/n13926746.md#1">谷歌人工智能聊天机器人Bard 在首次演示中出错</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/18/n9859787.md#1" target="_blank">杨宁：中南海内部电影与特供“内片”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/5/31/n3883877.md#1" target="_blank">公安部高官透露“天安门自焚”内幕</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/20/n9870365.md#1" target="_blank">林辉：文革第一禁书作者曾被内定死刑</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/12/n7547010.md#1" target="_blank">人生绝望疑无路 修法轮功获重生</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/10/n13969803.md#1">瑞典女子因车祸濒死 见到未来的丈夫与孩子</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/7/n13967518.md#1">千古名篇《长恨歌》经典诗句知多少？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/8/n13968218.md#1">【未解之谜】难以磨灭的爱恋 隔世再续前缘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/4/n13965036.md#1">圣女贞德 被嘲笑的神迹</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962321.md#1">夏祷：美的诞生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944569.md#1">【思想领袖】中共活摘器官 将手术室变成刑场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/12/n13971405.md#1">【新唐人大视野】6大危机交织 中共调查摸底？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/13/n13971910.md#1">【晚间新闻】全球首例 广东H3N8禽传人患者病亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/11/n13970630.md#1">一文看懂 美国泄密文件哪些内容和中共有关</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/11/n13970109.md#1">沙尘暴再袭 吹至长江边 影响中国18省市</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/11/n13970213.md#1">大陆家电上市公司出现亏损 1.6万人离职</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/10/n13970011.md#1">功夫明星陈惠敏拄拐杖现身 健康状况引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/11/n13970684.md#1">称分不清迪丽热巴和古力娜扎 冯小刚遭网民炮轰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/10/n13969978.md#1">资深港星吴耀汉病逝 享寿83岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/11/n13970772.md#1">39岁钟嘉欣庆生 获4岁儿送“最佳妈妈”奖杯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/11/n13970064.md#1">喜剧影星吴耀汉逝世 创作灵感源于自由空间</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963816.md#1">每天1根香蕉抗癌防心脏病 但2类人不适合</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/9/n13968938.md#1">甜菜有10大好处 瘦身降压让大脑更年轻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/11/n13970048.md#1">肾衰如何逆转？名中医教你免洗肾要诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/11/n13970299.md#1">外表像女儿 英主持人谈冻龄秘诀：洗冷水澡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949143.md#1">限糖、改善自由基、降低发炎 有助减缓老化</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285334.md#1">【时事军事】空射版标准6 填补美军关键领域</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285233.md#1">【时事金扫描】英国大变天 新首相曾两次访台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/4/13/n13971854.htm">专家：政治审查下中国聊天机器人发展不乐观</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/4/13/n13971854.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/23/4/13/n13971854.htm">专家：政审制度下 中国聊天机器人难发展</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/4/13/n13971854.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
